--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ avatar: https://avatars2.githubusercontent.com/u/629649?s=88
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  em
+  ail:
   facebook:
   flickr:
   github: vmpajares
@@ -42,7 +43,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:https://vmpajares.github.io
+url:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
