--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ avatar: https://avatars2.githubusercontent.com/u/629649?s=88
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  em
-  ail:
+  email:
   facebook:
   flickr:
   github: vmpajares
